--- a/components/navigation/navigation.html
+++ b/components/navigation/navigation.html
@@ -1,6 +1,11 @@
 <div>{{navigation.title}}</div>
 <div>
     <ul style="list-style: none;">
-        <li style="display: inline; margin: 0 10px; text-decoration: underline;" ng-repeat="opt in navigation.options">{{opt}}</li>
+        <li style="display: inline; margin: 0 10px; text-decoration: underline;">
+            <a ng-link="home">Home page</a>
+        </li>
+        <li style="display: inline; margin: 0 10px; text-decoration: underline;">
+            <a ng-link="about">About us</a>
+        </li>
     </ul>
 </div>
