new Angular 1.4RC1, refactoring

--- a/components/navigation/navigation.html
+++ b/components/navigation/navigation.html
@@ -2,10 +2,13 @@
 <div>
     <ul style="list-style: none;">
         <li style="display: inline; margin: 0 10px; text-decoration: underline;">
-            <a ng-link="home">Home page</a>
+            <a ng-link="home()">Home page</a>
         </li>
         <li style="display: inline; margin: 0 10px; text-decoration: underline;">
-            <a ng-link="about">About us</a>
+            <a ng-link="about()">About us</a>
+        </li>
+        <li style="display: inline; margin: 0 10px; text-decoration: underline;">
+            <a ng-link="about">About</a>
         </li>
     </ul>
 </div>
