--- a/components/about/about.html
+++ b/components/about/about.html
@@ -3,7 +3,7 @@
 
     <p>This is sample Angular application with some usage of:</p>
     <ul>
-        <li>Angular 1.4 Beta 6</li>
+        <li>Angular 1.4 RC 1</li>
         <li>New Angular Router component (for Angular 1.4/Angular 2) - ES5 version</li>
     </ul>
 </div>
